# eazydl

./: .gitignore  LICENSE  README.md  TODO.md  loading_animation.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tsconfig.json
backend/: config.py  database.py  download_service.py  downloader.py  main.py  schemas.py  scraper.py  security.py  serializers.py  settings_service.py
backend/routers/: __init__.py  downloads.py  images.py  library.py  pages.py  scrape.py  settings.py  status.py
data/: downloader.db  downloader.db-shm  downloader.db-wal
frontend/: browse.html  index.html  library.html  settings.html
frontend/css/: style.css
frontend/js/: api.js  browse.js  library.js  settings.js
frontend/js/components/: app-shell.js
scripts/: verify-ui.mjs
src/: api.ts  aria2-service.ts  config.ts  downloadService.ts  downloader.ts  ensureDirs.ts  index.ts  scraper.ts  security.ts  serializers.ts  server.ts  settings.ts
src/db/: database.ts  sqlite.ts
src/eazydl/: __main__.py  app.py  config.py  context.md  paths.py
src/eazydl/api/: __init__.py  downloads.py  index.py  library.py  settings.py
src/eazydl/db/: database.py  migrations.py  schema.sql
src/eazydl/downloader/: aria2.py  resolver.py  service.py
src/eazydl/indexer/: crawler.py  models.py  store.py  updater.py
src/eazydl/web/: index.html
src/eazydl/web/static/: app.js  styles.css
src/routes/: downloads.ts  images.ts  library.ts  pages.ts  scrape.ts  settings.ts  status.ts
